@@ -1229,6 +1229,29 @@ Init_wt()
     rb_define_global_const("RUNDIR", rb_str_new2(RUNDIR));
     rb_define_global_const("WT_CONFIG_XML", rb_str_new2(WT_CONFIG_XML));
 
+    // A problem has been found with QtRuby when it is run with Ruby 1.9.1
+    // and GC.stess is true - the same problem will occur with Wt::Ruby.
+    // In the smokeruby_mark() function called during garbage collection, 
+    // any virtual methods which are called on the instances being checked 
+    // could have overriden by Ruby methods.  So the Wt::Ruby runtime uses 
+    // 'respond_to()' to find out whether they have been overriden.
+    // However, this involves calling 'rb_intern()' on the method name,
+    // which means memory could be allocated, giving an error when running under
+    // GC.stress mode. So workround it by pre-allocating any strings with
+    // rb_intern() for all the C++ methods used in smokeruby_mark()
+    rb_intern("children");
+    rb_intern("items");
+    rb_intern("subMenu");
+    rb_intern("layout");
+    rb_intern("label");
+    rb_intern("validator");
+    rb_intern("series");
+    rb_intern("rowCount");
+    rb_intern("rowAt");
+    rb_intern("columnCount");
+    rb_intern("elementAt");
+    rb_intern("columnAt");
+
     rb_require("wt/wtruby.rb");
 
     // Do package initialization
